Fix text overlaps

--- a/app/style/MyTickets.less
+++ b/app/style/MyTickets.less
@@ -17,6 +17,7 @@
   height: 90px;
   width: 265px;
   padding-left: 62px;
+  padding-bottom: 5px;
   background-color: var(--background-back-color);
   background-repeat: no-repeat;
   background-size: 31px 43px;
@@ -31,7 +32,7 @@
 }
 
 .ticket-card.is-expanded {
-  height: 164px;
+  height: 100%;
 }
 
 .ticket-overview-header {
